--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiang Chaoyang"
   avatar           : "JiangChaoyang.jpg"
-  bio              : "Associate Professor, School of Mechanical Engineering, Beijing Institute of Technology"
+  bio              : "Associate Professor, Beijing Institute of Technology"
   location         : "Beijing, China"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
