--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-# main links links
+vi# main links links
 main:
   - title: "People"
     url: /people/
@@ -15,7 +15,7 @@ main:
   #- title: "Portfolio"
   #  url: /portfolio/
         
-  - title: "Professional Activities"
+  - title: "Services"
     url: /professional/
     
   - title: "Contact"
