--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-vi# main links links
+# main links links
 main:
   - title: "People"
     url: /people/
@@ -12,7 +12,7 @@ main:
   - title: "Teaching"
     url: /teaching/        
    
-  - title: "Teaching"
+  - title: "Services"
     url: /professional/
     
   - title: "Contact"
