--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,10 @@ main:
   #- title: "Awards"
   #  url: /awards/    
 
-  - title: "Teaching"
+- title: "Project"
+    url: /Project/   
+ 
+ - title: "Teaching"
     url: /teaching/        
    
   - title: "Services"
