--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   #- title: "Awards"
   #  url: /awards/     
  
+  - title: "Project"
+    url: /Project/  
+  
   - title: "Teaching"
     url: /teaching/        
    
