--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  #- title: "Awards"
-  #  url: /awards/     
- 
   - title: "Project"
-    url: /Project/  
+    url: /awards/     
+ 
+  #- title: "Project"
+   # url: /Project/  
   
   - title: "Teaching"
     url: /teaching/        
